log
Sat 06 May 2023 03:42:59 AM UTC: 
 sudoku.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  0|5
total_score: 0/70
19d9530
Sat 06 May 2023 03:50:11 AM UTC: 
 sudoku.c | 63 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 63 insertions(+)
 tests:  6|2
total_score: 45/70
1ba4907
Sun 07 May 2023 04:11:10 AM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  7|1
total_score: 55/70
becb331
Sun 07 May 2023 04:33:49 AM UTC: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:138:22: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  138 |       Node* n = stack->data;
      |                      ^~
sudoku.c:148:24: error: void value not ignored as it ought to be
  148 |       while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                        ^
Compilation failed
282d572
